package com.colorcraze.service;

import com.colorcraze.dto.*;
import com.colorcraze.model.*;
import org.springframework.messaging.simp.SimpMessagingTemplate;
import org.springframework.stereotype.Service;

import java.util.*;
import java.util.concurrent.ConcurrentHashMap;
import java.util.concurrent.Executors;
import java.util.concurrent.ScheduledExecutorService;
import java.util.concurrent.TimeUnit;
import java.util.stream.Collectors;

@Service
public class GameService {
    private final Map<String, Game> activeGames = new ConcurrentHashMap<>();
    private final Map<String, Thread> gameThreads = new ConcurrentHashMap<>();
    private final SimpMessagingTemplate messagingTemplate;
    private final Random random = new Random();
    
    private static final double MOVE_SPEED = 0.3;
    private static final double JUMP_VELOCITY = -1.2;
    private static final double GRAVITY = 0.08;
    private static final int TICK_RATE_MS = 33; // ~30 FPS
    
    public GameService(SimpMessagingTemplate messagingTemplate) {
        this.messagingTemplate = messagingTemplate;
    }
    
    public CreateGameResponse createGame(String playerName) {
        String code = generateGameCode();
        Game game = new Game(code);
        
        String playerId = UUID.randomUUID().toString();
        Player player = new Player(playerId, playerName, PlayerColor.RED);
        game.addPlayer(player);
        
        activeGames.put(code, game);
        startLobbyTimer(code);
        
        // Schedule initial broadcast after a short delay to ensure frontend WebSocket is connected
        ScheduledExecutorService scheduler = Executors.newSingleThreadScheduledExecutor();
        scheduler.schedule(() -> {
            broadcastGameState(code);
            scheduler.shutdown();
        }, 500, TimeUnit.MILLISECONDS);
        
        return new CreateGameResponse(code, playerId, PlayerColor.RED.name());
    }
    
    public JoinGameResponse joinGame(String code, String playerName, PlayerColor color) {
        Game game = activeGames.get(code);
        if (game == null) {
            return new JoinGameResponse(null, false, "Game not found", null);
        }
        
        if (game.getState() != Game.GameState.LOBBY) {
            return new JoinGameResponse(null, false, "Game already started", null);
        }
        
        if (game.getPlayers().size() >= Game.getMaxPlayers()) {
            return new JoinGameResponse(null, false, "Game is full", null);
        }
        
        if (isColorTaken(game, color)) {
            return new JoinGameResponse(null, false, "Color already taken", null);
        }
        
        String playerId = UUID.randomUUID().toString();
        Player player = new Player(playerId, playerName, color);
        game.addPlayer(player);
        
        broadcastGameState(code);
        
        return new JoinGameResponse(playerId, true, "Joined successfully", color.name());
    }
    
    private boolean isColorTaken(Game game, PlayerColor color) {
        return game.getPlayers().values().stream()
                .anyMatch(p -> p.getColor() == color);
    }
    
    public GameStateDTO getGameState(String code) {
        Game game = activeGames.get(code);
        if (game == null) {
            return null;
        }
        return buildGameStateDTO(game);
    }
    
    public void handleMove(String code, MoveRequest moveRequest) {
        Game game = activeGames.get(code);
        if (game == null || game.getState() != Game.GameState.PLAYING) {
            return;
        }
        
        Player player = game.getPlayers().get(moveRequest.getPlayerId());
        if (player == null) {
            return;
        }
        
        String direction = moveRequest.getDirection();
        if ("left".equals(direction)) {
            player.setVelocityX(-MOVE_SPEED);
        } else if ("right".equals(direction)) {
            player.setVelocityX(MOVE_SPEED);
        } else if ("stop".equals(direction)) {
            player.setVelocityX(0);
        }
        
        if (moveRequest.isJump() && !player.isJumping()) {
            player.setVelocityY(JUMP_VELOCITY);
            player.setJumping(true);
        }
    }
    
    private void startLobbyTimer(String code) {
        ScheduledExecutorService scheduler = Executors.newSingleThreadScheduledExecutor();
        
        // Broadcast game state every second during lobby
        scheduler.scheduleAtFixedRate(() -> {
            Game game = activeGames.get(code);
            if (game != null && game.getState() == Game.GameState.LOBBY) {
                broadcastGameState(code);
            }
        }, 1, 1, TimeUnit.SECONDS);
        
        // Start game after lobby duration
        scheduler.schedule(() -> {
            Game game = activeGames.get(code);
            if (game != null && game.getState() == Game.GameState.LOBBY) {
                startGame(code);
            }
            scheduler.shutdown();
        }, Game.getLobbyDurationSeconds(), TimeUnit.SECONDS);
    }
    
    private void startGame(String code) {
        Game game = activeGames.get(code);
        if (game == null) {
            return;
        }
        
        game.startGame();
        broadcastGameState(code);
        
        Thread gameThread = new Thread(() -> runGameLoop(code));
        gameThread.start();
        gameThreads.put(code, gameThread);
    }
    
    private void runGameLoop(String code) {
        Game game = activeGames.get(code);
        if (game == null) {
            return;
        }
        
        while (game.isRunning() && !game.isGameExpired()) {
            try {
                updateGameState(game);
                broadcastGameState(code);
                Thread.sleep(TICK_RATE_MS);
            } catch (InterruptedException e) {
                Thread.currentThread().interrupt();
                break;
            }
        }
        
        endGame(code);
    }
    
    private void updateGameState(Game game) {
        for (Player player : game.getPlayers().values()) {
            updatePlayerPhysics(player, game.getBoard());
            paintCellsUnderPlayer(player, game.getBoard());
        }
        // Update scores in real-time during gameplay
        updatePlayerScores(game);
    }
    
    private void updatePlayerScores(Game game) {
        Map<PlayerColor, Integer> colorScores = game.getBoard().calculateScores();
        for (Player player : game.getPlayers().values()) {
            player.setScore(colorScores.getOrDefault(player.getColor(), 0));
        }
    }
    
    private void updatePlayerPhysics(Player player, Board board) {
        // Store old position
        double oldX = player.getX();
        double oldY = player.getY();
        
        // Apply gravity if jumping
        if (player.isJumping()) {
            player.setVelocityY(player.getVelocityY() + GRAVITY);
        }
        
        // Update position based on velocity
        player.setX(player.getX() + player.getVelocityX());
        player.setY(player.getY() + player.getVelocityY());
        
        // Horizontal boundary checks with wall collision
        // Left wall collision (x=0)
        if (player.getX() <= 0) {
            player.setX(1); // Keep player away from left wall
            player.setVelocityX(0); // Stop horizontal movement
        }
        // Right wall collision (x=width-1, which is x=39 for 40-wide board)
        if (player.getX() >= board.getWidth() - 1) {
            player.setX(board.getWidth() - 2); // Keep player away from right wall
            player.setVelocityX(0); // Stop horizontal movement
        }
        
        int cellX = (int) player.getX();
        int cellY = (int) player.getY();
        
        // Ceiling collision - prevent player from going into or through the ceiling (y=0)
        if (player.getY() <= 0) {
            player.setY(1); // Keep player below the ceiling block
            player.setVelocityY(0);
            // If hitting ceiling, cancel upward velocity and start falling
            if (player.getVelocityY() < 0) {
                player.setJumping(true);
            }
        }
        
        // Check if player is inside a paintable block (shouldn't happen, but prevent getting stuck)
        if (board.isCellPaintable(cellX, cellY)) {
            // Player is inside a solid block - push them out
            // Try pushing up first (most common case when landing on platform)
            if (board.isCellPaintable(cellX, cellY) && !board.isCellPaintable(cellX, cellY - 1)) {
                player.setY(cellY - 1);
                player.setVelocityY(0);
                player.setJumping(false);
            }
        }
        
        // Check collision with blocks below (landing on platforms/ground)
        int cellYBelow = (int)(player.getY() + 1);
        if (cellYBelow < board.getHeight() && board.isCellPaintable(cellX, cellYBelow)) {
            // If moving down and there's a solid block below
            if (player.getVelocityY() >= 0) {
                player.setY(cellYBelow - 1);
                player.setVelocityY(0);
                player.setJumping(false);
            }
        } else if (player.getVelocityY() >= 0 && cellYBelow < board.getHeight()) {
            // No platform below and moving down - should be jumping/falling
            player.setJumping(true);
        }
        
        // Ground collision - bottom of map (floor is at y=29, player stands at y=28)
        int groundY = board.getHeight() - 2;
        if (player.getY() >= groundY) {
            player.setY(groundY);
            player.setVelocityY(0);
            player.setJumping(false);
        }
    }
    
    private void paintCellsUnderPlayer(Player player, Board board) {
        int cellX = (int) player.getX();
        int cellY = (int) player.getY();
        
        // Paint current cell and cell below
        board.paintCell(cellX, cellY, player.getColor());
        board.paintCell(cellX, cellY + 1, player.getColor());
        
        // Paint left wall if player is touching it (x=1 means touching wall at x=0)
        if (cellX <= 1) {
            board.paintCell(0, cellY, player.getColor());
            board.paintCell(0, cellY + 1, player.getColor());
        }
        
        // Paint right wall if player is touching it (x=width-2 means touching wall at x=width-1)
        if (cellX >= board.getWidth() - 2) {
            board.paintCell(board.getWidth() - 1, cellY, player.getColor());
            board.paintCell(board.getWidth() - 1, cellY + 1, player.getColor());
        }
    }
    
    private void endGame(String code) {
        Game game = activeGames.get(code);
        if (game == null) {
            return;
        }
        
        game.finishGame();
        
        GameResultDTO resultDTO = buildGameResultDTO(game);
        messagingTemplate.convertAndSend("/topic/games/" + code + "/results", resultDTO);
        
        gameThreads.remove(code);
        
        ScheduledExecutorService scheduler = Executors.newSingleThreadScheduledExecutor();
        scheduler.schedule(() -> {
            activeGames.remove(code);
            scheduler.shutdown();
        }, 60, TimeUnit.SECONDS);
    }
    
    private void broadcastGameState(String code) {
        GameStateDTO stateDTO = getGameState(code);
        if (stateDTO != null) {
            messagingTemplate.convertAndSend("/topic/games/" + code + "/state", stateDTO);
        }
    }
    
    private GameStateDTO buildGameStateDTO(Game game) {
        GameStateDTO dto = new GameStateDTO();
        dto.setGameCode(game.getCode());
        dto.setState(game.getState().name());
        
        List<GameStateDTO.PlayerDTO> playerDTOs = game.getPlayers().values().stream()
                .map(GameStateDTO.PlayerDTO::new)
                .collect(Collectors.toList());
        dto.setPlayers(playerDTOs);
        
        Map<String, String> boardData = new HashMap<>();
        List<String> paintableBlocks = new ArrayList<>();
        Board board = game.getBoard();
        for (int y = 0; y < board.getHeight(); y++) {
            for (int x = 0; x < board.getWidth(); x++) {
                // Track paintable blocks
                if (board.isCellPaintable(x, y)) {
                    paintableBlocks.add(x + "," + y);
                }
                // Track painted cells
                PlayerColor color = board.getCellColor(x, y);
                if (color != null) {
                    boardData.put(x + "," + y, color.name());
                }
            }
        }
        dto.setBoard(boardData);
        dto.setPaintableBlocks(paintableBlocks);
        
        if (game.getState() == Game.GameState.LOBBY) {
            dto.setRemainingTime(game.getRemainingLobbyTime());
        } else if (game.getState() == Game.GameState.PLAYING) {
            dto.setRemainingTime(game.getRemainingGameTime());
        }
        
        return dto;
    }
    
    private GameResultDTO buildGameResultDTO(Game game) {
        GameResultDTO dto = new GameResultDTO();
        
        Player winner = game.getWinner();
        if (winner != null) {
            dto.setWinnerId(winner.getId());
            dto.setWinnerName(winner.getName());
            dto.setWinnerColor(winner.getColor().name());
        }
        
        List<GameResultDTO.PlayerScoreDTO> scores = game.getPlayers().values().stream()
                .map(p -> new GameResultDTO.PlayerScoreDTO(
                        p.getId(), p.getName(), p.getColor().name(), p.getScore()))
                .sorted((a, b) -> Integer.compare(b.getScore(), a.getScore()))
                .collect(Collectors.toList());
        dto.setScores(scores);
        
        return dto;
    }
    
    private String generateGameCode() {
        String chars = "ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789";
        StringBuilder code = new StringBuilder();
        for (int i = 0; i < 6; i++) {
            code.append(chars.charAt(random.nextInt(chars.length())));
        }
        return code.toString();
    }
}
